--- a/index.org
+++ b/index.org
@@ -2,8 +2,8 @@
 #+OPTIONS: toc:nil num:nil
 
 #+BEGIN_SRC
-(defun <3
-"Emacs Love")
+(defun <3 ()
+  "Emacs Love")
 #+END_SRC
 
 Aliquam erat volutpat.  Nunc eleifend leo vitae magna.  In id erat non orci commodo lobortis.  Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.  Sed diam.  Praesent fermentum tempor tellus.  Nullam tempus.  Mauris ac felis vel velit tristique imperdiet.  Donec at pede.  Etiam vel neque nec dui dignissim bibendum.  Vivamus id enim.  Phasellus neque orci, porta a, aliquet quis, semper a, massa.  Phasellus purus.  Pellentesque tristique imperdiet tortor.  Nam euismod tellus id erat.
