--- a/index.org
+++ b/index.org
@@ -1,15 +1,14 @@
 #+TITLE: Emacs Love (<3)
 #+OPTIONS: toc:nil num:nil
 
-#+BEGIN_SRC
+#+BEGIN_SRC emacs-lisp
 (defun <3 ()
-  "Emacs Love")
+  "Emacs Love
+
+A collective of software for Emacs and Org-Mode.")
 #+END_SRC
 
-Aliquam erat volutpat.  Nunc eleifend leo vitae magna.  In id erat non orci commodo lobortis.  Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.  Sed diam.  Praesent fermentum tempor tellus.  Nullam tempus.  Mauris ac felis vel velit tristique imperdiet.  Donec at pede.  Etiam vel neque nec dui dignissim bibendum.  Vivamus id enim.  Phasellus neque orci, porta a, aliquet quis, semper a, massa.  Phasellus purus.  Pellentesque tristique imperdiet tortor.  Nam euismod tellus id erat.
-
 * Projects
-
 
 *** [[http://emacs.love/weblorg][Weblorg]]
     A static HTML generator for Emacs & Org-Mode
